# spotifyctl

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Spotify Title Reader.cpp  Spotify Title Reader.sln  Spotify Title Reader.vcxproj  Spotify Title Reader.vcxproj.filters  Spotify.cpp  Spotify.h  libspotifyctl.sln  libspotifyctl.vcxproj  libspotifyctl.vcxproj.filters  spotify_control.sln  spotify_control.vcxproj  spotify_control.vcxproj.filters
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bindings/node/: .gitignore  README.md  index.js  package.json
bindings/node/examples/: now_playing.js
bindings/node/test/: smoke.test.mjs
bindings/node/types/: index.d.ts
bindings/python/: .gitignore  README.md  pyproject.toml  setup.py
bindings/python/examples/: now_playing.py
bindings/python/libspotifyctl/: __init__.py  _bindings.py
bindings/python/tests/: test_smoke.py
cli/: main.cpp  spotifyctl.vcxproj
cmake/: libspotifyctlConfig.cmake.in
docs/: CNAME  api-c.md  api-cpp.md  api-node.md  api-python.md  cli.md  index.html
examples/c_smoke/: main.c
examples/now_playing/: main.cpp  now_playing.vcxproj
examples/rickroll/: main.cpp  rickroll.vcxproj
include/spotify/: c_api.h  client.h  control.h  events.h  export.h  playback.h  title_parser.h  version.h  version.h.in
src/: aggregator.h  audio_session.cpp  audio_session.h  c_api.cpp  client_win32.cpp  control.cpp  impl.h  json_writer.h  position.h  smtc_source.cpp  smtc_source.h  title_parser.cpp
tests/: CMakeLists.txt  test_aggregator.cpp  test_c_api.cpp  test_json_writer.cpp  test_position.cpp  test_signal.cpp  test_title_parser.cpp  test_uri_builders.cpp
