[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libspotifyctl"
version = "0.3.2"
description = "Offline (no Web API) library for reading from and controlling Spotify on Windows"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ColdMeekly" }]
keywords = [
    "spotify", "spotifyctl", "windows", "smtc", "audio",
    "now-playing", "media-controls", "automation", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://spotifyctl.cldmk.ly"
Source = "https://github.com/ColdMeekly/spotifyctl"
Issues = "https://github.com/ColdMeekly/spotifyctl/issues"
Changelog = "https://github.com/ColdMeekly/spotifyctl/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["libspotifyctl"]
include-package-data = true

[tool.setuptools.package-data]
libspotifyctl = ["_prebuilt/libspotifyctl.dll", "py.typed"]
